# Fake-News-Detector

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml  requirements-explain.txt  requirements-tracking.txt  requirements.txt
.github/workflows/: test.yml
config/: config.yaml
config/profiles/: distil.yaml  fast.yaml  memory.yaml
docs/: datasets.md  implementation_tracker.md  improvement_plan.md  migration_guide.md  test_metrics_history.md  testing_guide.md  usage_examples.md
scripts/: benchmark_inference.py  extract_test_samples.py  setup_test_model_dir.py
src/fnd/: __init__.py  config.py  exceptions.py
src/fnd/api/: __init__.py  main.py
src/fnd/data/: datasets.py  prepare.py
src/fnd/eval/: evaluate.py
src/fnd/explain/: __init__.py  lime_explain.py  shap_explain.py
src/fnd/models/: factory.py  heads.py  optimization.py  utils.py
src/fnd/training/: metrics.py  train.py
src/fnd/web/: app.py
tests/: conftest.py  test_api.py  test_config.py  test_data.py  test_data_comprehensive.py  test_evaluate.py  test_imports.py  test_integration.py  test_lime_explain.py  test_metrics.py  test_metrics_comprehensive.py  test_models.py  test_optimization.py  test_prepare.py  test_shap_explain.py  test_train.py  test_training.py  test_utils.py  test_web.py
wandb/: latest-run
wandb/run-20251022_215703-3eap5l8w/: run-3eap5l8w.wandb
wandb/run-20251022_215703-3eap5l8w/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
